test/conformance/kuttl/generate/clusterpolicy/standard/data/nosync/cpol-data-nosync-delete-trigger/02-trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-data-nosync-delete-trigger-ns
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-org
  namespace:  cpol-data-nosync-delete-trigger-ns
