test/conformance/kuttl/generate/clusterpolicy/standard/data/nosync/cpol-data-nosync-delete-trigger/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name:  cpol-data-nosync-delete-trigger
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
